--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Complete Node.js Guide",
+  "main": "app.js",
   "engines": {
     "node": "14.17.0"
   },
